--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -103,27 +103,28 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/deparement">
               <span data-feather="file" class="align-text-bottom"></span>
-              Orders
+              Departements
+              
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/user">
               <span data-feather="shopping-cart" class="align-text-bottom"></span>
-              Products
+              Users
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/incident">
               <span data-feather="users" class="align-text-bottom"></span>
-              Customers
+              Incident
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/task">
               <span data-feather="bar-chart-2" class="align-text-bottom"></span>
-              Reports
+              tasks
             </a>
           </li>
           <li class="nav-item">
