--- a/templates/incident/index.html.twig
+++ b/templates/incident/index.html.twig
@@ -37,5 +37,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_incident_new') }}">Create new</a>
+    <a href="{{ path('app_incident_new') }}">Create new Incident</a>
 {% endblock %}
