--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,15 +3,23 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+<center>
+<br><br><br><br>
+<h1>Register </h1>
+
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.username) }}
+        {{ form_row(registrationForm.username) }}<br>
+        {{ form_row(registrationForm.nom_user) }}<br>
+        {{ form_row(registrationForm.prenom_user) }}<br>
+        {{ form_row(registrationForm.email) }}<br>
+        {{ form_row(registrationForm.num_tel) }}<br>
         {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+            label: ' '
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
         <button type="submit" class="btn">Register</button>
     {{ form_end(registrationForm) }}
+</center>
 {% endblock %}
