added oracle tester entity
added oracle tester entity and generated crud

--- a/templates/incident/index.html.twig
+++ b/templates/incident/index.html.twig
@@ -38,4 +38,8 @@
     </table>
 
     <a href="{{ path('app_incident_new') }}">Create new Incident</a>
+<iframe src="http://localhost:3000/d-solo/TJEXXcu7k/new-dashboard?orgId=1&from=1654487907754&to=1654509507754&theme=light&panelId=32" width="500" height="450" frameborder="0"></iframe><br>
+
+<iframe src="http://localhost:3000/d-solo/TJEXXcu7k/new-dashboard?orgId=1&from=1609819202000&to=1622017801000&theme=light&panelId=36" width="500" height="450" frameborder="0"></iframe>
+    <iframe src="http://localhost:3000/d-solo/7L6f3397k/neo4j-dashboard?orgId=1&from=1654487746480&to=1654509346480&theme=light&panelId=2" width="400" height="400" frameborder="0"></iframe>
 {% endblock %}
